<resources>
    <string name="app_name">Outer Space Manager</string>
    <string name="identifiant">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="signup">Créer compte</string>
    <string name="login">Connexion</string>
    <string name="connection_error">Une erreur est survenue lors de la connexion</string>

    <string name="generalView">Vue générale</string>
    <string name="buildings">Bâtiments</string>
    <string name="fleet">Flotte</string>
    <string name="search">Recherches</string>
    <string name="sheepBuilder">Chantier Spatial</string>
    <string name="galaxy">Galaxie</string>
    <string name="logout">Déconnexion</string>

    <string name="mineralsCost">Minerais : %1$d</string>
    <string name="gasCost">Gaz : %1$d</string>
    <string name="buildingEffect">Effect : %1$s</string>
    <string name="timeToBuild">Durée : %1$d</string>
    <string name="levelUpBuilding">Améliorer le bâtiment</string>
    <string name="buildinIsBuilding">Le bâtiment est en construction...</string>
    <string name="notEnough">Pas assez de ressources...</string>

    <string name="shipAttack">Min/Max attaque :</string>
    <string name="shipShield">Bouclier :</string>
    <string name="shipSpeed">Vitesse :</string>
    <string name="shipTimeToBuild">Durée :</string>
    <string name="createShip">Créer %1$d %2$s !</string>

    <string name="searchEffect">Effet : %1$s</string>
    <string name="searchTimeTo">Temps de recherche : %1$s sec</string>

    <string name="reportsNameAttacked">Attaqué par %1$s</string>
    <string name="reportsNameAttacker">Attaque de %1$s</string>
</resources>
