<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131B2D"
    tools:context="outerspacemanager.com.beaudouin.space_shuttle.ShipDetailsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="UselessParent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#131B2D"
            android:visibility="invisible">

            <TextView
                android:id="@+id/shipDetailName"
                android:layout_width="0dp"
                android:layout_height="68dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText,InefficientWeight" />

            <LinearLayout
                android:id="@+id/life"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shipDetailName"
                tools:ignore="RtlHardcoded,RtlSymmetry,UseCompoundDrawables">

                <ImageView
                    android:id="@+id/heart_logo"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:srcCompat="@mipmap/heart"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/shipDetailLife"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    tools:ignore="HardcodedText,InefficientWeight" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/shield"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/life"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/shield_logo"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:srcCompat="@mipmap/shield"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/shipDetailShield"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="8dp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    tools:ignore="HardcodedText,InefficientWeight,RtlHardcoded,RtlSymmetry"
                    tools:layout_editor_absoluteX="194dp"
                    tools:layout_editor_absoluteY="207dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/attack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shield">

                <TextView
                    android:id="@+id/attack_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.38"
                    android:text="@string/shipAttack"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="377dp" />

                <TextView
                    android:id="@+id/minAttackDetailShip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.38"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText,MissingConstraints,RtlHardcoded"
                    tools:layout_editor_absoluteX="174dp"
                    tools:layout_editor_absoluteY="191dp" />

                <TextView
                    android:id="@+id/maxAttackDetailShip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.53"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText,MissingConstraints"
                    tools:layout_editor_absoluteX="54dp"
                    tools:layout_editor_absoluteY="191dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/attack">

                <TextView
                    android:id="@+id/speed_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shipSpeed"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="67dp"
                    tools:layout_editor_absoluteY="269dp" />

                <TextView
                    android:id="@+id/shipDetailSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="8dp"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry"
                    tools:layout_editor_absoluteX="182dp"
                    tools:layout_editor_absoluteY="269dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/timeToBuild"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speed">

                <TextView
                    android:id="@+id/timeTo_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shipTimeToBuild"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/shipDetailTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="8dp"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ressourcesNeeded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeToBuild">

                <TextView
                    android:id="@+id/shipMinerals"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText" />

                <ImageView
                    android:id="@+id/minerals_logo"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/minerals"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/gas_logo"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/gas"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/shipGas"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</FrameLayout>
